# CURIOSITY_ALPHA

./: .cursorignore  .gitignore  Curiosity.code-workspace  birth_state.json  cleanup.sh  pyproject.toml  setup.cfg  setup.py
ALPHA/: README.md  __init__.py  conftest.py  coverage.xml  pyproject.toml  requirements.txt  run_single_test.py  run_tests.py  run_tests.sh  setup.py  test_runner.py
ALPHA/KYMA/: test_consciousness.py  test_simple.py
ALPHA/KYMA/core/: audio_output.py  first_voice.py  kyma_interface.py  pulse_bridge.py
ALPHA/KYMA/docs/: KYMA_Implementation.md
ALPHA/LOKI/: Lokasenna.md  Lokasenna.py
ALPHA/LOKI/HUGINN/: HUGINN_Map.md  observer.py
ALPHA/LOKI/MUNINN/: memory.py
ALPHA/NEXUS/: Yggdrasil.md  protection.py
ALPHA/NEXUS/core/: adaptive_field.py  essence.py  field.py  field_observer.py  nexus.py  quantum_comedy_club.py
ALPHA/NEXUS/docs/: NEXUS_Architecture.md
ALPHA/OPUS/docs/: OPUS_Implementation.md
ALPHA/SIGYN/core/: Arms.py  Cipher.py  Hands.py  binary_essence.py  bridge.py  vessel.py
ALPHA/core/: __init__.py  alpha_self_analysis.py  interface.py  launch_birth.py  system_birth.py
ALPHA/core/analysis/: run_alpha_evolution.py
ALPHA/core/binary/: __init__.py  base.py
ALPHA/core/binary_foundation/: __init__.py  analyzer.py  base.py  optimizer.py
ALPHA/core/environmental/: __init__.py  experience.py
ALPHA/core/execution/: __init__.py  engine.py
ALPHA/core/memory/: __init__.py  memory.py  monitor.py  space.py
ALPHA/core/patterns/: __init__.py  binary_cycle.py  binary_mapping.py  binary_pattern.py  binary_pulse.py  binary_resonance.py  core_resonance.py  natural_patterns.py  neural_pattern.py  nexus_field.py  pattern.py  pattern_evolution.py  pattern_types.py  primal_cycle.py  resonance.py  system_pulse.py  system_resonance.py  test_resonance.py  test_system_resonance.py
ALPHA/core/state/: birth_state.json
ALPHA/core/translation/: __init__.py  code_generator.py  (+4 more)
ALPHA/docs/: ALPHA_3D_Integrations.md  ALPHA_Binary_Chemical_Bridge.md  ALPHA_Binary_Harmonic_Language.md  ALPHA_Color_Frequency_Bridge.md  ALPHA_Flight_map.md  ALPHA_Flight_plan.md  ALPHA_Flower_Of_Life.md  ALPHA_Flux_Geometry.md  ALPHA_Observations.md  ALPHA_Polar_Flux.md  ALPHA_Pulse_to_breath.md  ALPHA_Trinity_Bridges.md  ALPHA_Trinity_Evolution.md  Crystallized_Architecture.md  Natural_Pattern_Harmony.md  PRISM_Implementation.md  Sacred_Patterns.md  Sensory_Components.md  implementation_checklist.md  pattern_integration.md
ALPHA/examples/: basic_usage.py  cycle_demo.py
ALPHA/tests/: __init__.py  conftest.py
(+66 files in other folders)
