[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = [
    'tests',
    'setup.py',
    '.venv',
    '__pycache__',
    '.mypy_cache',
    '.pytest_cache',
    'build',
    'dist',
    'PRISM/PRISM_Visual_Files',
    'PRISM/PRISM_Visual_Files/Library/PythonInstall'
]

[[tool.mypy.overrides]]
module = ["UnityEngine", "clr"]
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.venv
    | build
    | dist
    | __pycache__
    | PRISM/PRISM_Visual_Files
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    '.venv',
    'build',
    'dist',
    '__pycache__',
    'PRISM/PRISM_Visual_Files'
]

[tool.pylint.messages_control]
disable = [
    "C0111",
    "C0103",
    "C0330",
    "C0326",
    "W0511",
    "R0903",
    "R0913",
    "W0621",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.master]
ignore = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "PRISM/PRISM_Visual_Files"
]

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "tests/*",
    "PRISM/PRISM_Visual_Files"
]

# VS Code / Pylance settings
[tool.pylance]
exclude = ["PRISM/PRISM_Visual_Files/**"]

[tool.pyright]
exclude = ["PRISM/PRISM_Visual_Files/**"]
