[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ALPHA"
version = "0.1.0"
description = "ALPHA Pattern Recognition and Translation System"
authors = [{name = "ALPHA Team"}]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
